deploy: ddef20edddcfc1b627ccbe9148f4c3abf6ce92e0

--- a/config/i18n.html
+++ b/config/i18n.html
@@ -143,9 +143,9 @@ For example, the original text (<code>ja</code>)</p>
 <pre><code class="language-ignore">- bg: 0
 - \ch{rd}団長！車の用意できました！
 - switches:
-  - おう！||$end = false
-  - 止まるんじゃねぇぞ！||$end = true
-  - 止まれ！|false
+  - おう！
+  - 止まるんじゃねぇぞ！
+  - 止まれ！
 </code></pre>
 <p>could be translated as (<code>zh-Hans</code>)</p>
 <pre><code class="language-ignore">-
