--- a/config/script.html
+++ b/config/script.html
@@ -145,6 +145,9 @@ The only supported types are unit <code>~</code>, boolean, integer, and string.<
     Str(String),
 }
 <span class="boring">}</span></code></pre></pre>
+<h2 id="using-ayacript"><a class="header" href="#using-ayacript">Using <code>ayacript</code></a></h2>
+<p><code>ayacript</code> is the plugin that provides Ayaka script functionalities.
+You need to add <code>ayascript</code> to the config file. See <a href="../plugin/summary.html">Plugin</a>.</p>
 <h2 id="execute-scripts"><a class="header" href="#execute-scripts">Execute scripts</a></h2>
 <p>Execute a piece of script(we call it <em>program</em>) with <code>exec</code> command:</p>
 <pre><code class="language-yaml">- exec: $res = 1 + 1
