--- a/plugin/line_plugin.html
+++ b/plugin/line_plugin.html
@@ -162,6 +162,7 @@ fn hello(_ctx: LineProcessContext) -&gt; LineProcessResult {
 <p>The <code>LineProcessResult</code> object contains the global variables and temp variables. The temp variables will only apply to this specific line.</p>
 <h2 id="existing-plugins"><a class="header" href="#existing-plugins">Existing plugins</a></h2>
 <div class="table-wrapper"><table><thead><tr><th>Plugin</th><th>Description</th></tr></thead><tbody>
+<tr><td><code>ayacript</code></td><td>Ayaka script.</td></tr>
 <tr><td><code>media</code></td><td>Multimedia commands.</td></tr>
 </tbody></table>
 </div>
