--- a/print.html
+++ b/print.html
@@ -5,7 +5,10 @@
         <meta charset="UTF-8">
         <title>Ayaka Book</title>
         <meta name="robots" content="noindex" />
+
+
         <!-- Custom HTML head -->
+        
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -16,15 +19,18 @@
         <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/chrome.css">
         <link rel="stylesheet" href="css/print.css" media="print">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="fonts/fonts.css">
+
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="highlight.css">
         <link rel="stylesheet" href="tomorrow-night.css">
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -83,7 +89,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                <div id="menu-bar-hover-placeholder"></div>
+                                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -110,6 +116,7 @@
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
+
                     </div>
                 </div>
 
@@ -123,6 +130,7 @@
                         </ul>
                     </div>
                 </div>
+
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
                 <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
@@ -172,8 +180,7 @@ You can also write your own fantastic game by customizing the frontend.</p>
 $ cd Ayaka
 </code></pre>
 <h2 id="add-targets-for-webassembly"><a class="header" href="#add-targets-for-webassembly">Add targets for WebAssembly</a></h2>
-<pre><code class="language-bash">$ rustup target add wasm32-wasi
-$ rustup target add wasm32-unknown-unknown
+<pre><code class="language-bash">$ rustup target add wasm32-unknown-unknown
 </code></pre>
 <h2 id="test-the-utilities"><a class="header" href="#test-the-utilities">Test the utilities</a></h2>
 <pre><code class="language-bash">$ make test
@@ -454,7 +461,7 @@ while let Some(status) = context.next().await {
 let mut context = context.await?;</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="plugin"><a class="header" href="#plugin">Plugin</a></h1>
 <p>All plugins should target WebAssembly.
-We now support <code>wasm32-unknown-unknown</code> and <code>wasm32-wasi</code> targets.</p>
+We now support <code>wasm32-unknown-unknown</code> target.</p>
 <p>The plugin runtime is supported by <a href="https://wasmer.io/">Wasmer</a>.
 Our <a href="plugin/../platforms.html">platform support</a> is largely limited by this engine.</p>
 <p>We provide a crate <code>ayaka-bindings</code> to easily author a plugin in Rust.</p>
@@ -674,31 +681,42 @@ It provides basic functionalities, including control flow, multimedia, i18n and 
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+
+
                         <div style="clear: both"></div>
                     </nav>
                 </div>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+
             </nav>
 
         </div>
 
+
+
+
         <script>
             window.playground_copyable = true;
         </script>
+
+
         <script src="elasticlunr.min.js"></script>
         <script src="mark.min.js"></script>
         <script src="searcher.js"></script>
+
         <script src="clipboard.min.js"></script>
         <script src="highlight.js"></script>
         <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
+
         <script>
         window.addEventListener('load', function() {
             window.setTimeout(window.print, 100);
         });
         </script>
+
     </body>
 </html>
