--- a/en/packaging.html
+++ b/en/packaging.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="zh-Hans" class="sidebar-visible no-js light">
+<html lang="en" class="sidebar-visible no-js light">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Line 插件 - Ayaka Book</title>
+        <title>Packaging - Ayaka Book</title>
 
 
         <!-- Custom HTML head -->
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="../favicon.svg">
-        <link rel="shortcut icon" href="../favicon.png">
-        <link rel="stylesheet" href="../css/variables.css">
-        <link rel="stylesheet" href="../css/general.css">
-        <link rel="stylesheet" href="../css/chrome.css">
-        <link rel="stylesheet" href="../css/print.css" media="print">
+        <link rel="icon" href="favicon.svg">
+        <link rel="shortcut icon" href="favicon.png">
+        <link rel="stylesheet" href="css/variables.css">
+        <link rel="stylesheet" href="css/general.css">
+        <link rel="stylesheet" href="css/chrome.css">
+        <link rel="stylesheet" href="css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../fonts/fonts.css">
+        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" href="highlight.css">
+        <link rel="stylesheet" href="tomorrow-night.css">
+        <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -34,7 +34,7 @@
     <body>
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../";
+            var path_to_root = "";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -80,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> 介绍</a></li><li class="chapter-item expanded "><a href="../cook/summary.html"><strong aria-hidden="true">2.</strong> 开始</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> 安装 Rust</a></li><li class="chapter-item expanded "><a href="../cook/02-install-msys2.html"><strong aria-hidden="true">2.2.</strong> 安装 MSYS2</a></li></ol></li><li class="chapter-item expanded "><a href="../quick_start.html"><strong aria-hidden="true">3.</strong> 从源代码开始</a></li><li class="chapter-item expanded "><a href="../config/summary.html"><strong aria-hidden="true">4.</strong> 配置</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/structure.html"><strong aria-hidden="true">4.1.</strong> 文件结构</a></li><li class="chapter-item expanded "><a href="../config/character.html"><strong aria-hidden="true">4.2.</strong> 指定角色</a></li><li class="chapter-item expanded "><a href="../config/resources.html"><strong aria-hidden="true">4.3.</strong> 资源</a></li><li class="chapter-item expanded "><a href="../config/i18n.html"><strong aria-hidden="true">4.4.</strong> 国际化</a></li><li class="chapter-item expanded "><a href="../config/switches.html"><strong aria-hidden="true">4.5.</strong> 分支</a></li><li class="chapter-item expanded "><a href="../config/script.html"><strong aria-hidden="true">4.6.</strong> 脚本</a></li></ol></li><li class="chapter-item expanded "><a href="../runtime/summary.html"><strong aria-hidden="true">5.</strong> 运行时</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../runtime/run.html"><strong aria-hidden="true">5.1.</strong> 运行一个游戏</a></li></ol></li><li class="chapter-item expanded "><a href="../plugin/summary.html"><strong aria-hidden="true">6.</strong> 插件</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script 插件</a></li><li class="chapter-item expanded "><a href="../plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text 插件</a></li><li class="chapter-item expanded "><a href="../plugin/line_plugin.html" class="active"><strong aria-hidden="true">6.3.</strong> Line 插件</a></li><li class="chapter-item expanded "><a href="../plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action 插件</a></li><li class="chapter-item expanded "><a href="../plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game 插件</a></li></ol></li><li class="chapter-item expanded "><a href="../gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="../packaging.html"><strong aria-hidden="true">8.</strong> 打包</a></li><li class="chapter-item expanded "><a href="../platforms.html"><strong aria-hidden="true">9.</strong> 支持的平台</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="cook/summary.html"><strong aria-hidden="true">2.</strong> Start</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> Install Rust</a></li><li class="chapter-item expanded "><a href="cook/02-install-msys2.html"><strong aria-hidden="true">2.2.</strong> Install MSYS2</a></li></ol></li><li class="chapter-item expanded "><a href="quick_start.html"><strong aria-hidden="true">3.</strong> Start from source</a></li><li class="chapter-item expanded "><a href="config/summary.html"><strong aria-hidden="true">4.</strong> Config</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/structure.html"><strong aria-hidden="true">4.1.</strong> File structure</a></li><li class="chapter-item expanded "><a href="config/character.html"><strong aria-hidden="true">4.2.</strong> Specify character</a></li><li class="chapter-item expanded "><a href="config/resources.html"><strong aria-hidden="true">4.3.</strong> Resources</a></li><li class="chapter-item expanded "><a href="config/i18n.html"><strong aria-hidden="true">4.4.</strong> Internationalization</a></li><li class="chapter-item expanded "><a href="config/switches.html"><strong aria-hidden="true">4.5.</strong> Switches</a></li><li class="chapter-item expanded "><a href="config/script.html"><strong aria-hidden="true">4.6.</strong> Script</a></li></ol></li><li class="chapter-item expanded "><a href="runtime/summary.html"><strong aria-hidden="true">5.</strong> Runtime</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="runtime/run.html"><strong aria-hidden="true">5.1.</strong> Run a game</a></li></ol></li><li class="chapter-item expanded "><a href="plugin/summary.html"><strong aria-hidden="true">6.</strong> Plugin</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script plugin</a></li><li class="chapter-item expanded "><a href="plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text plugin</a></li><li class="chapter-item expanded "><a href="plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line plugin</a></li><li class="chapter-item expanded "><a href="plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action plugin</a></li><li class="chapter-item expanded "><a href="plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game plugin</a></li></ol></li><li class="chapter-item expanded "><a href="gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="packaging.html" class="active"><strong aria-hidden="true">8.</strong> Packaging</a></li><li class="chapter-item expanded "><a href="platforms.html"><strong aria-hidden="true">9.</strong> Support platforms</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -112,7 +112,7 @@
                     <h1 class="menu-title">Ayaka Book</h1>
 
                     <div class="right-buttons">
-                        <a href="../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -141,17 +141,28 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="line-插件"><a class="header" href="#line-插件">Line 插件</a></h1>
+                        <h1 id="packaging"><a class="header" href="#packaging">Packaging</a></h1>
+<p>We support package format called <code>ayapack</code>.
+Internally it is a TAR format archive, without any compression.
+We load the package file with memory map to reduce allocations.</p>
+<h2 id="packaging-1"><a class="header" href="#packaging-1">Packaging</a></h2>
+<p><code>tar</code> executable is pre-installed on almost all platforms. There may be BSD-Tar or GNU-Tar. For a directory <code>foo</code> that contains <code>config.yaml</code>, we can simply execute</p>
+<pre><code class="language-bash">$ cd foo
+$ tar -cf foo.ayapack *
+</code></pre>
+<p>The parameter <code>c</code> means creating a package, and <code>f</code> means the following parameter is the package path.</p>
+<h2 id="details"><a class="header" href="#details">Details</a></h2>
+<p>The details of the parsing and loading are in the <a href="https://github.com/Berrysoft/vfs-tar"><code>vfs-tar</code></a>.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../plugin/text_plugin.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="gui/live2d.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../plugin/action_plugin.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="platforms.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -161,11 +172,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../plugin/text_plugin.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="gui/live2d.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../plugin/action_plugin.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="platforms.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -180,13 +191,13 @@
         </script>
 
 
-        <script src="../elasticlunr.min.js"></script>
-        <script src="../mark.min.js"></script>
-        <script src="../searcher.js"></script>
+        <script src="elasticlunr.min.js"></script>
+        <script src="mark.min.js"></script>
+        <script src="searcher.js"></script>
 
-        <script src="../clipboard.min.js"></script>
-        <script src="../highlight.js"></script>
-        <script src="../book.js"></script>
+        <script src="clipboard.min.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
 
