--- a/en/config/i18n.html
+++ b/en/config/i18n.html
@@ -149,7 +149,7 @@ We use CLDR to choose the best fit locale for current system.</p>
 <p>The translation of the texts is always a difficult job. You don't need to copy all commands as is.
 For example, the original text (<code>ja</code>)</p>
 <pre><code class="language-ignore">- bg: 0
-- \ch{rd}団長！車の用意できました！
+- /rd//団長！車の用意できました！
 - switches:
   - おう！
   - 止まるんじゃねぇぞ！
