deploy: 3de8cc66c1e70227fae323b8ab12816421b5354e

--- a/en/print.html
+++ b/en/print.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="cook/summary.html"><strong aria-hidden="true">2.</strong> Start</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> Install Rust</a></li><li class="chapter-item expanded "><a href="cook/02-install-msys2.html"><strong aria-hidden="true">2.2.</strong> Install MSYS2</a></li></ol></li><li class="chapter-item expanded "><a href="quick_start.html"><strong aria-hidden="true">3.</strong> Start from source</a></li><li class="chapter-item expanded "><a href="config/summary.html"><strong aria-hidden="true">4.</strong> Config</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/structure.html"><strong aria-hidden="true">4.1.</strong> File structure</a></li><li class="chapter-item expanded "><a href="config/character.html"><strong aria-hidden="true">4.2.</strong> Specify character</a></li><li class="chapter-item expanded "><a href="config/resources.html"><strong aria-hidden="true">4.3.</strong> Resources</a></li><li class="chapter-item expanded "><a href="config/i18n.html"><strong aria-hidden="true">4.4.</strong> Internationalization</a></li><li class="chapter-item expanded "><a href="config/switches.html"><strong aria-hidden="true">4.5.</strong> Switches</a></li><li class="chapter-item expanded "><a href="config/script.html"><strong aria-hidden="true">4.6.</strong> Script</a></li></ol></li><li class="chapter-item expanded "><a href="runtime/summary.html"><strong aria-hidden="true">5.</strong> Runtime</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="runtime/run.html"><strong aria-hidden="true">5.1.</strong> Run a game</a></li></ol></li><li class="chapter-item expanded "><a href="plugin/summary.html"><strong aria-hidden="true">6.</strong> Plugin</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script plugin</a></li><li class="chapter-item expanded "><a href="plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text plugin</a></li><li class="chapter-item expanded "><a href="plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line plugin</a></li><li class="chapter-item expanded "><a href="plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action plugin</a></li><li class="chapter-item expanded "><a href="plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game plugin</a></li></ol></li><li class="chapter-item expanded "><a href="gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="packaging.html"><strong aria-hidden="true">8.</strong> Packaging</a></li><li class="chapter-item expanded "><a href="platforms.html"><strong aria-hidden="true">9.</strong> Support platforms</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="cook/summary.html"><strong aria-hidden="true">2.</strong> Start from zero</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> Install Rust</a></li><li class="chapter-item expanded "><a href="cook/02-install-makefile.html"><strong aria-hidden="true">2.2.</strong> Install Makefile</a></li></ol></li><li class="chapter-item expanded "><a href="quick_start.html"><strong aria-hidden="true">3.</strong> Start from source</a></li><li class="chapter-item expanded "><a href="config/summary.html"><strong aria-hidden="true">4.</strong> Config</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/structure.html"><strong aria-hidden="true">4.1.</strong> File structure</a></li><li class="chapter-item expanded "><a href="config/character.html"><strong aria-hidden="true">4.2.</strong> Specify character</a></li><li class="chapter-item expanded "><a href="config/resources.html"><strong aria-hidden="true">4.3.</strong> Resources</a></li><li class="chapter-item expanded "><a href="config/i18n.html"><strong aria-hidden="true">4.4.</strong> Internationalization</a></li><li class="chapter-item expanded "><a href="config/switches.html"><strong aria-hidden="true">4.5.</strong> Switches</a></li><li class="chapter-item expanded "><a href="config/script.html"><strong aria-hidden="true">4.6.</strong> Script</a></li></ol></li><li class="chapter-item expanded "><a href="runtime/summary.html"><strong aria-hidden="true">5.</strong> Runtime</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="runtime/run.html"><strong aria-hidden="true">5.1.</strong> Run a game</a></li></ol></li><li class="chapter-item expanded "><a href="plugin/summary.html"><strong aria-hidden="true">6.</strong> Plugin</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script plugin</a></li><li class="chapter-item expanded "><a href="plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text plugin</a></li><li class="chapter-item expanded "><a href="plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line plugin</a></li><li class="chapter-item expanded "><a href="plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action plugin</a></li><li class="chapter-item expanded "><a href="plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game plugin</a></li></ol></li><li class="chapter-item expanded "><a href="gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="packaging.html"><strong aria-hidden="true">8.</strong> Packaging</a></li><li class="chapter-item expanded "><a href="platforms.html"><strong aria-hidden="true">9.</strong> Support platforms</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,7 +144,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Ayaka project is a project for OSPP 2022.
+<p>Ayaka project was initially a project for OSPP 2022.
 It is a voice novel engine which aims at 3 goals: simple, free, concentrate.</p>
 <h2 id="simple"><a class="header" href="#simple">Simple</a></h2>
 <p>A visual novel should be easy to author.
@@ -152,20 +152,64 @@ The author need little knowledge of programming.
 We provide a config file format based on YAML and TeX-like commands.
 It is easy to learn and author your own voice novel.</p>
 <h2 id="free"><a class="header" href="#free">Free</a></h2>
-<p>You are free to implement anything you'd like with our script and plugin system.
-The script is simple, but also strong with the plugin system.
+<p>You are free to implement anything you'd like with our plugin system.
+We provide a simple, but also strong script plugin by default.
 The plugin system provides possibility to calculate and hook important parts in the runtime.</p>
 <h2 id="concentrate"><a class="header" href="#concentrate">Concentrate</a></h2>
 <p>The project is separated into 4 parts: runtime, plugins, config, frontend.
 You can concentrate at one part without knowing about others.
 If you like, you can write config file only, and author a voice novel.
 You can also write your own fantastic game by customizing the frontend.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="start"><a class="header" href="#start">Start</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="start-from-zero"><a class="header" href="#start-from-zero">Start from zero</a></h1>
 <p>Here is the guide with zero knowledge of computer programming.
-You will learn to install Rust and install MSYS2.
+You will learn to install Rust and install Makefile.
 Then you can follow the instructions in <a href="cook/../quick_start.html">Start from source</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="install-rust"><a class="header" href="#install-rust">Install Rust</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="install-msys2"><a class="header" href="#install-msys2">Install MSYS2</a></h1>
+<p>Rust is a modern, compiled language, which means it doesn't need a special runtime environment or an interpreter to execute. What we need to install is the development environment of Rust.</p>
+<p>Browse to the <a href="https://www.rust-lang.org/">official cite</a> of Rust first. Then we download following the <a href="https://www.rust-lang.org/tools/install">installation guide</a> on the official cite.</p>
+<p>Rust can run on Windows, Linux, macOS, FreeBSD and NetBSD.</p>
+<h2 id="if-you-are-working-on-windows"><a class="header" href="#if-you-are-working-on-windows">If you are working on Windows</a></h2>
+<p>Choose to download <a href="https://static.rust-lang.org/rustup/dist/i686-pc-windows-msvc/rustup-init.exe">32-bit</a> or <a href="https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe">64-bit</a> <code>rustup</code> installer according your operating system.</p>
+<h2 id="if-you-are-working-on-unix"><a class="header" href="#if-you-are-working-on-unix">If you are working on Unix</a></h2>
+<p>Run the following command in the terminal</p>
+<pre><code>curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+</code></pre>
+<p>and follow the instructions.</p>
+<p>After the installation done, type <code>rust --version</code>, <code>cargo --version</code> and <code>rustup --version</code> in the terminal to make sure the installation valid.</p>
+<h2 id="switch-to-nightly"><a class="header" href="#switch-to-nightly">Switch to nightly</a></h2>
+<pre><code>rustup install nightly
+rustup default nightly
+</code></pre>
+<h2 id="notes-on-every-time-before-running"><a class="header" href="#notes-on-every-time-before-running">Notes on every time before running...</a></h2>
+<p>We use nightly toolchain to compile. You need to update regularly</p>
+<pre><code>rustup update
+</code></pre>
+<p>and</p>
+<pre><code>git pull
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="install-makefile"><a class="header" href="#install-makefile">Install Makefile</a></h1>
+<p>Ayaka uses Makefile to organize the compilation and testing of the components.</p>
+<h2 id="if-you-are-working-on-windows-1"><a class="header" href="#if-you-are-working-on-windows-1">If you are working on Windows</a></h2>
+<p>We suggest using MSYS2 distributed <a href="https://packages.msys2.org/package/make"><code>make</code></a> or MSYS2 distributed <a href="https://packages.msys2.org/base/mingw-w64-make"><code>mingw32-make</code></a>, or <a href="https://chocolatey.org/">chocolatey</a> distributed <a href="https://community.chocolatey.org/packages/make"><code>make</code></a>.</p>
+<h3 id="install-msys2-distributed-one"><a class="header" href="#install-msys2-distributed-one">Install MSYS2 distributed one</a></h3>
+<p>Download the installer from <a href="https://www.msys2.org/">MSYS2 official site</a> and follow the installation instructions.</p>
+<p>And run the following command in the MSYS2 shell</p>
+<pre><code>pacman -S make
+</code></pre>
+<p>to install <code>make</code>. If you would like a specific MinGW Makefile, e.g. MinGW64 one, run</p>
+<pre><code>pacman -S mingw-w64-x86_64-make
+</code></pre>
+<p>to install <code>mingw32-make</code> in that environment.</p>
+<h3 id="install-chocolatey-distributed-one"><a class="header" href="#install-chocolatey-distributed-one">Install chocolatey distributed one</a></h3>
+<p>Follow the instructions on the <a href="https://chocolatey.org/install">chocolatey official site</a> to install chocolatey.</p>
+<p>Run the following command</p>
+<pre><code>choco install make
+</code></pre>
+<h3 id="add-make-to-path-environmental-variable"><a class="header" href="#add-make-to-path-environmental-variable">Add <code>make</code> to <code>PATH</code> environmental variable</a></h3>
+<p>If you use MSYS2, <code>make</code> won't be add into <code>PATH</code>, and you can only use it in the MSYS2 shell. To make it easier, you can choose to add the corresponding directory of MSYS2 <code>/usr/bin</code> (or MinGW64 <code>/mingw64/bin</code>), usually <code>C:\msys64\usr\bin</code> (or <code>C:\msys64\mingw64\bin</code>) into environmental variable <code>PATH</code>.</p>
+<p>You can also choose to not changing the environmental variable, but let MSYS2 shell inherit the variables from Windows, to call <code>cargo</code> and <code>npm</code> in it. According to the <a href="https://sourceforge.net/p/msys2/discussion/general/thread/dbe17030/">solution from developers</a>, you can change environmental variable <code>MSYS2_PATH_TYPE</code> to <code>inherit</code>.</p>
+<h2 id="if-you-are-working-on-linux"><a class="header" href="#if-you-are-working-on-linux">If you are working on Linux</a></h2>
+<p>Distros of Linux differ, but usually the package name should be <code>make</code>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="start-from-source"><a class="header" href="#start-from-source">Start from source</a></h1>
 <h2 id="prerequisites"><a class="header" href="#prerequisites">Prerequisites</a></h2>
 <p>All platforms need <a href="https://www.rust-lang.org/">Rust</a> and <a href="https://nodejs.org/">Nodejs</a> installed.</p>
