--- a/en/cook/01-install-rust.html
+++ b/en/cook/01-install-rust.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../cook/summary.html"><strong aria-hidden="true">2.</strong> Start</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cook/01-install-rust.html" class="active"><strong aria-hidden="true">2.1.</strong> Install Rust</a></li><li class="chapter-item expanded "><a href="../cook/02-install-msys2.html"><strong aria-hidden="true">2.2.</strong> Install MSYS2</a></li></ol></li><li class="chapter-item expanded "><a href="../quick_start.html"><strong aria-hidden="true">3.</strong> Start from source</a></li><li class="chapter-item expanded "><a href="../config/summary.html"><strong aria-hidden="true">4.</strong> Config</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/structure.html"><strong aria-hidden="true">4.1.</strong> File structure</a></li><li class="chapter-item expanded "><a href="../config/character.html"><strong aria-hidden="true">4.2.</strong> Specify character</a></li><li class="chapter-item expanded "><a href="../config/resources.html"><strong aria-hidden="true">4.3.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../config/i18n.html"><strong aria-hidden="true">4.4.</strong> Internationalization</a></li><li class="chapter-item expanded "><a href="../config/switches.html"><strong aria-hidden="true">4.5.</strong> Switches</a></li><li class="chapter-item expanded "><a href="../config/script.html"><strong aria-hidden="true">4.6.</strong> Script</a></li></ol></li><li class="chapter-item expanded "><a href="../runtime/summary.html"><strong aria-hidden="true">5.</strong> Runtime</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../runtime/run.html"><strong aria-hidden="true">5.1.</strong> Run a game</a></li></ol></li><li class="chapter-item expanded "><a href="../plugin/summary.html"><strong aria-hidden="true">6.</strong> Plugin</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script plugin</a></li><li class="chapter-item expanded "><a href="../plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text plugin</a></li><li class="chapter-item expanded "><a href="../plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line plugin</a></li><li class="chapter-item expanded "><a href="../plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action plugin</a></li><li class="chapter-item expanded "><a href="../plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game plugin</a></li></ol></li><li class="chapter-item expanded "><a href="../gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="../packaging.html"><strong aria-hidden="true">8.</strong> Packaging</a></li><li class="chapter-item expanded "><a href="../platforms.html"><strong aria-hidden="true">9.</strong> Support platforms</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../cook/summary.html"><strong aria-hidden="true">2.</strong> Start from zero</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cook/01-install-rust.html" class="active"><strong aria-hidden="true">2.1.</strong> Install Rust</a></li><li class="chapter-item expanded "><a href="../cook/02-install-makefile.html"><strong aria-hidden="true">2.2.</strong> Install Makefile</a></li></ol></li><li class="chapter-item expanded "><a href="../quick_start.html"><strong aria-hidden="true">3.</strong> Start from source</a></li><li class="chapter-item expanded "><a href="../config/summary.html"><strong aria-hidden="true">4.</strong> Config</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/structure.html"><strong aria-hidden="true">4.1.</strong> File structure</a></li><li class="chapter-item expanded "><a href="../config/character.html"><strong aria-hidden="true">4.2.</strong> Specify character</a></li><li class="chapter-item expanded "><a href="../config/resources.html"><strong aria-hidden="true">4.3.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../config/i18n.html"><strong aria-hidden="true">4.4.</strong> Internationalization</a></li><li class="chapter-item expanded "><a href="../config/switches.html"><strong aria-hidden="true">4.5.</strong> Switches</a></li><li class="chapter-item expanded "><a href="../config/script.html"><strong aria-hidden="true">4.6.</strong> Script</a></li></ol></li><li class="chapter-item expanded "><a href="../runtime/summary.html"><strong aria-hidden="true">5.</strong> Runtime</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../runtime/run.html"><strong aria-hidden="true">5.1.</strong> Run a game</a></li></ol></li><li class="chapter-item expanded "><a href="../plugin/summary.html"><strong aria-hidden="true">6.</strong> Plugin</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script plugin</a></li><li class="chapter-item expanded "><a href="../plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text plugin</a></li><li class="chapter-item expanded "><a href="../plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line plugin</a></li><li class="chapter-item expanded "><a href="../plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action plugin</a></li><li class="chapter-item expanded "><a href="../plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game plugin</a></li></ol></li><li class="chapter-item expanded "><a href="../gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="../packaging.html"><strong aria-hidden="true">8.</strong> Packaging</a></li><li class="chapter-item expanded "><a href="../platforms.html"><strong aria-hidden="true">9.</strong> Support platforms</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -143,6 +143,28 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="install-rust"><a class="header" href="#install-rust">Install Rust</a></h1>
+<p>Rust is a modern, compiled language, which means it doesn't need a special runtime environment or an interpreter to execute. What we need to install is the development environment of Rust.</p>
+<p>Browse to the <a href="https://www.rust-lang.org/">official cite</a> of Rust first. Then we download following the <a href="https://www.rust-lang.org/tools/install">installation guide</a> on the official cite.</p>
+<p>Rust can run on Windows, Linux, macOS, FreeBSD and NetBSD.</p>
+<h2 id="if-you-are-working-on-windows"><a class="header" href="#if-you-are-working-on-windows">If you are working on Windows</a></h2>
+<p>Choose to download <a href="https://static.rust-lang.org/rustup/dist/i686-pc-windows-msvc/rustup-init.exe">32-bit</a> or <a href="https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe">64-bit</a> <code>rustup</code> installer according your operating system.</p>
+<h2 id="if-you-are-working-on-unix"><a class="header" href="#if-you-are-working-on-unix">If you are working on Unix</a></h2>
+<p>Run the following command in the terminal</p>
+<pre><code>curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+</code></pre>
+<p>and follow the instructions.</p>
+<p>After the installation done, type <code>rust --version</code>, <code>cargo --version</code> and <code>rustup --version</code> in the terminal to make sure the installation valid.</p>
+<h2 id="switch-to-nightly"><a class="header" href="#switch-to-nightly">Switch to nightly</a></h2>
+<pre><code>rustup install nightly
+rustup default nightly
+</code></pre>
+<h2 id="notes-on-every-time-before-running"><a class="header" href="#notes-on-every-time-before-running">Notes on every time before running...</a></h2>
+<p>We use nightly toolchain to compile. You need to update regularly</p>
+<pre><code>rustup update
+</code></pre>
+<p>and</p>
+<pre><code>git pull
+</code></pre>
 
                     </main>
 
@@ -152,7 +174,7 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../cook/02-install-msys2.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../cook/02-install-makefile.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -166,7 +188,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../cook/02-install-msys2.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../cook/02-install-makefile.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
