--- a/en/cook/02-install-makefile.html
+++ b/en/cook/02-install-makefile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="zh-Hans" class="sidebar-visible no-js light">
+<html lang="en" class="sidebar-visible no-js light">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>安装 MSYS2 - Ayaka Book</title>
+        <title>Install Makefile - Ayaka Book</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> 介绍</a></li><li class="chapter-item expanded "><a href="../cook/summary.html"><strong aria-hidden="true">2.</strong> 开始</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> 安装 Rust</a></li><li class="chapter-item expanded "><a href="../cook/02-install-msys2.html" class="active"><strong aria-hidden="true">2.2.</strong> 安装 MSYS2</a></li></ol></li><li class="chapter-item expanded "><a href="../quick_start.html"><strong aria-hidden="true">3.</strong> 从源代码开始</a></li><li class="chapter-item expanded "><a href="../config/summary.html"><strong aria-hidden="true">4.</strong> 配置</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/structure.html"><strong aria-hidden="true">4.1.</strong> 文件结构</a></li><li class="chapter-item expanded "><a href="../config/character.html"><strong aria-hidden="true">4.2.</strong> 指定角色</a></li><li class="chapter-item expanded "><a href="../config/resources.html"><strong aria-hidden="true">4.3.</strong> 资源</a></li><li class="chapter-item expanded "><a href="../config/i18n.html"><strong aria-hidden="true">4.4.</strong> 国际化</a></li><li class="chapter-item expanded "><a href="../config/switches.html"><strong aria-hidden="true">4.5.</strong> 分支</a></li><li class="chapter-item expanded "><a href="../config/script.html"><strong aria-hidden="true">4.6.</strong> 脚本</a></li></ol></li><li class="chapter-item expanded "><a href="../runtime/summary.html"><strong aria-hidden="true">5.</strong> 运行时</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../runtime/run.html"><strong aria-hidden="true">5.1.</strong> 运行一个游戏</a></li></ol></li><li class="chapter-item expanded "><a href="../plugin/summary.html"><strong aria-hidden="true">6.</strong> 插件</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script 插件</a></li><li class="chapter-item expanded "><a href="../plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text 插件</a></li><li class="chapter-item expanded "><a href="../plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line 插件</a></li><li class="chapter-item expanded "><a href="../plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action 插件</a></li><li class="chapter-item expanded "><a href="../plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game 插件</a></li></ol></li><li class="chapter-item expanded "><a href="../gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="../packaging.html"><strong aria-hidden="true">8.</strong> 打包</a></li><li class="chapter-item expanded "><a href="../platforms.html"><strong aria-hidden="true">9.</strong> 支持的平台</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../cook/summary.html"><strong aria-hidden="true">2.</strong> Start from zero</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> Install Rust</a></li><li class="chapter-item expanded "><a href="../cook/02-install-makefile.html" class="active"><strong aria-hidden="true">2.2.</strong> Install Makefile</a></li></ol></li><li class="chapter-item expanded "><a href="../quick_start.html"><strong aria-hidden="true">3.</strong> Start from source</a></li><li class="chapter-item expanded "><a href="../config/summary.html"><strong aria-hidden="true">4.</strong> Config</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/structure.html"><strong aria-hidden="true">4.1.</strong> File structure</a></li><li class="chapter-item expanded "><a href="../config/character.html"><strong aria-hidden="true">4.2.</strong> Specify character</a></li><li class="chapter-item expanded "><a href="../config/resources.html"><strong aria-hidden="true">4.3.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../config/i18n.html"><strong aria-hidden="true">4.4.</strong> Internationalization</a></li><li class="chapter-item expanded "><a href="../config/switches.html"><strong aria-hidden="true">4.5.</strong> Switches</a></li><li class="chapter-item expanded "><a href="../config/script.html"><strong aria-hidden="true">4.6.</strong> Script</a></li></ol></li><li class="chapter-item expanded "><a href="../runtime/summary.html"><strong aria-hidden="true">5.</strong> Runtime</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../runtime/run.html"><strong aria-hidden="true">5.1.</strong> Run a game</a></li></ol></li><li class="chapter-item expanded "><a href="../plugin/summary.html"><strong aria-hidden="true">6.</strong> Plugin</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script plugin</a></li><li class="chapter-item expanded "><a href="../plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text plugin</a></li><li class="chapter-item expanded "><a href="../plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line plugin</a></li><li class="chapter-item expanded "><a href="../plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action plugin</a></li><li class="chapter-item expanded "><a href="../plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game plugin</a></li></ol></li><li class="chapter-item expanded "><a href="../gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="../packaging.html"><strong aria-hidden="true">8.</strong> Packaging</a></li><li class="chapter-item expanded "><a href="../platforms.html"><strong aria-hidden="true">9.</strong> Support platforms</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,11 +142,29 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="安装-msys2"><a class="header" href="#安装-msys2">安装 MSYS2</a></h1>
-<ul>
-<li>https://packages.msys2.org/package/make</li>
-<li>https://segmentfault.com/q/1010000016064839</li>
-</ul>
+                        <h1 id="install-makefile"><a class="header" href="#install-makefile">Install Makefile</a></h1>
+<p>Ayaka uses Makefile to organize the compilation and testing of the components.</p>
+<h2 id="if-you-are-working-on-windows"><a class="header" href="#if-you-are-working-on-windows">If you are working on Windows</a></h2>
+<p>We suggest using MSYS2 distributed <a href="https://packages.msys2.org/package/make"><code>make</code></a> or MSYS2 distributed <a href="https://packages.msys2.org/base/mingw-w64-make"><code>mingw32-make</code></a>, or <a href="https://chocolatey.org/">chocolatey</a> distributed <a href="https://community.chocolatey.org/packages/make"><code>make</code></a>.</p>
+<h3 id="install-msys2-distributed-one"><a class="header" href="#install-msys2-distributed-one">Install MSYS2 distributed one</a></h3>
+<p>Download the installer from <a href="https://www.msys2.org/">MSYS2 official site</a> and follow the installation instructions.</p>
+<p>And run the following command in the MSYS2 shell</p>
+<pre><code>pacman -S make
+</code></pre>
+<p>to install <code>make</code>. If you would like a specific MinGW Makefile, e.g. MinGW64 one, run</p>
+<pre><code>pacman -S mingw-w64-x86_64-make
+</code></pre>
+<p>to install <code>mingw32-make</code> in that environment.</p>
+<h3 id="install-chocolatey-distributed-one"><a class="header" href="#install-chocolatey-distributed-one">Install chocolatey distributed one</a></h3>
+<p>Follow the instructions on the <a href="https://chocolatey.org/install">chocolatey official site</a> to install chocolatey.</p>
+<p>Run the following command</p>
+<pre><code>choco install make
+</code></pre>
+<h3 id="add-make-to-path-environmental-variable"><a class="header" href="#add-make-to-path-environmental-variable">Add <code>make</code> to <code>PATH</code> environmental variable</a></h3>
+<p>If you use MSYS2, <code>make</code> won't be add into <code>PATH</code>, and you can only use it in the MSYS2 shell. To make it easier, you can choose to add the corresponding directory of MSYS2 <code>/usr/bin</code> (or MinGW64 <code>/mingw64/bin</code>), usually <code>C:\msys64\usr\bin</code> (or <code>C:\msys64\mingw64\bin</code>) into environmental variable <code>PATH</code>.</p>
+<p>You can also choose to not changing the environmental variable, but let MSYS2 shell inherit the variables from Windows, to call <code>cargo</code> and <code>npm</code> in it. According to the <a href="https://sourceforge.net/p/msys2/discussion/general/thread/dbe17030/">solution from developers</a>, you can change environmental variable <code>MSYS2_PATH_TYPE</code> to <code>inherit</code>.</p>
+<h2 id="if-you-are-working-on-linux"><a class="header" href="#if-you-are-working-on-linux">If you are working on Linux</a></h2>
+<p>Distros of Linux differ, but usually the package name should be <code>make</code>.</p>
 
                     </main>
 
