--- a/zh-Hans/cook/02-install-makefile.html
+++ b/zh-Hans/cook/02-install-makefile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en" class="sidebar-visible no-js light">
+<html lang="zh-Hans" class="sidebar-visible no-js light">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Install MSYS2 - Ayaka Book</title>
+        <title>安装 Makefile - Ayaka Book</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../cook/summary.html"><strong aria-hidden="true">2.</strong> Start</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> Install Rust</a></li><li class="chapter-item expanded "><a href="../cook/02-install-msys2.html" class="active"><strong aria-hidden="true">2.2.</strong> Install MSYS2</a></li></ol></li><li class="chapter-item expanded "><a href="../quick_start.html"><strong aria-hidden="true">3.</strong> Start from source</a></li><li class="chapter-item expanded "><a href="../config/summary.html"><strong aria-hidden="true">4.</strong> Config</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/structure.html"><strong aria-hidden="true">4.1.</strong> File structure</a></li><li class="chapter-item expanded "><a href="../config/character.html"><strong aria-hidden="true">4.2.</strong> Specify character</a></li><li class="chapter-item expanded "><a href="../config/resources.html"><strong aria-hidden="true">4.3.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../config/i18n.html"><strong aria-hidden="true">4.4.</strong> Internationalization</a></li><li class="chapter-item expanded "><a href="../config/switches.html"><strong aria-hidden="true">4.5.</strong> Switches</a></li><li class="chapter-item expanded "><a href="../config/script.html"><strong aria-hidden="true">4.6.</strong> Script</a></li></ol></li><li class="chapter-item expanded "><a href="../runtime/summary.html"><strong aria-hidden="true">5.</strong> Runtime</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../runtime/run.html"><strong aria-hidden="true">5.1.</strong> Run a game</a></li></ol></li><li class="chapter-item expanded "><a href="../plugin/summary.html"><strong aria-hidden="true">6.</strong> Plugin</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script plugin</a></li><li class="chapter-item expanded "><a href="../plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text plugin</a></li><li class="chapter-item expanded "><a href="../plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line plugin</a></li><li class="chapter-item expanded "><a href="../plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action plugin</a></li><li class="chapter-item expanded "><a href="../plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game plugin</a></li></ol></li><li class="chapter-item expanded "><a href="../gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="../packaging.html"><strong aria-hidden="true">8.</strong> Packaging</a></li><li class="chapter-item expanded "><a href="../platforms.html"><strong aria-hidden="true">9.</strong> Support platforms</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> 介绍</a></li><li class="chapter-item expanded "><a href="../cook/summary.html"><strong aria-hidden="true">2.</strong> 从零开始</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> 安装 Rust</a></li><li class="chapter-item expanded "><a href="../cook/02-install-makefile.html" class="active"><strong aria-hidden="true">2.2.</strong> 安装 Makefile</a></li></ol></li><li class="chapter-item expanded "><a href="../quick_start.html"><strong aria-hidden="true">3.</strong> 从源代码开始</a></li><li class="chapter-item expanded "><a href="../config/summary.html"><strong aria-hidden="true">4.</strong> 配置</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../config/structure.html"><strong aria-hidden="true">4.1.</strong> 文件结构</a></li><li class="chapter-item expanded "><a href="../config/character.html"><strong aria-hidden="true">4.2.</strong> 指定角色</a></li><li class="chapter-item expanded "><a href="../config/resources.html"><strong aria-hidden="true">4.3.</strong> 资源</a></li><li class="chapter-item expanded "><a href="../config/i18n.html"><strong aria-hidden="true">4.4.</strong> 国际化</a></li><li class="chapter-item expanded "><a href="../config/switches.html"><strong aria-hidden="true">4.5.</strong> 分支</a></li><li class="chapter-item expanded "><a href="../config/script.html"><strong aria-hidden="true">4.6.</strong> 脚本</a></li></ol></li><li class="chapter-item expanded "><a href="../runtime/summary.html"><strong aria-hidden="true">5.</strong> 运行时</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../runtime/run.html"><strong aria-hidden="true">5.1.</strong> 运行一个游戏</a></li></ol></li><li class="chapter-item expanded "><a href="../plugin/summary.html"><strong aria-hidden="true">6.</strong> 插件</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script 插件</a></li><li class="chapter-item expanded "><a href="../plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text 插件</a></li><li class="chapter-item expanded "><a href="../plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line 插件</a></li><li class="chapter-item expanded "><a href="../plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action 插件</a></li><li class="chapter-item expanded "><a href="../plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game 插件</a></li></ol></li><li class="chapter-item expanded "><a href="../gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="../packaging.html"><strong aria-hidden="true">8.</strong> 打包</a></li><li class="chapter-item expanded "><a href="../platforms.html"><strong aria-hidden="true">9.</strong> 支持的平台</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,7 +142,29 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="install-msys2"><a class="header" href="#install-msys2">Install MSYS2</a></h1>
+                        <h1 id="安装-makefile"><a class="header" href="#安装-makefile">安装 Makefile</a></h1>
+<p>Ayaka 使用 Makefile 组织各个组件的编译和测试。</p>
+<h2 id="如果您正在运行-windows"><a class="header" href="#如果您正在运行-windows">如果您正在运行 Windows</a></h2>
+<p>一般建议使用 MSYS2 分发的 <a href="https://packages.msys2.org/package/make"><code>make</code></a>，也可以使用 MSYS2 分发的 <a href="https://packages.msys2.org/base/mingw-w64-make"><code>mingw32-make</code></a> 或 <a href="https://chocolatey.org/">chocolatey</a> 分发的 <a href="https://community.chocolatey.org/packages/make"><code>make</code></a>。</p>
+<h3 id="安装-msys2-分发的-make"><a class="header" href="#安装-msys2-分发的-make">安装 MSYS2 分发的 <code>make</code></a></h3>
+<p>首先从 <a href="https://www.msys2.org/">MSYS2 官网</a> 下载安装程序，并按照官网的安装指引安装 MSYS2。</p>
+<p>然后在 MSYS2 shell 中，运行</p>
+<pre><code>pacman -S make
+</code></pre>
+<p>安装 <code>make</code>。如果想要安装特定的 MinGW 环境的 Makefile，例如 MinGW64 环境，可以运行</p>
+<pre><code>pacman -S mingw-w64-x86_64-make
+</code></pre>
+<p>以安装该环境的 <code>mingw32-make</code>。</p>
+<h3 id="安装-chocolatey-分发的-make"><a class="header" href="#安装-chocolatey-分发的-make">安装 chocolatey 分发的 <code>make</code></a></h3>
+<p>首先从 <a href="https://chocolatey.org/install">chocolatey 官网</a> 根据相应的指引安装 chocolatey。</p>
+<p>然后在命令行中，运行</p>
+<pre><code>choco install make
+</code></pre>
+<h3 id="将-make-加入到环境变量-path"><a class="header" href="#将-make-加入到环境变量-path">将 <code>make</code> 加入到环境变量 <code>PATH</code></a></h3>
+<p>如果你使用 MSYS2，<code>make</code> 是不会被加入到 <code>PATH</code> 中的，你只有在使用 MSYS2 shell 的时候才能够调用它。针对这样的情况，你可以选择将 MSYS2 的 <code>/usr/bin</code> 目录（或者是 MinGW64 对应的 <code>/mingw64/bin</code>）对应的 Windows 目录，一般是 <code>C:\msys64\usr\bin</code>（或者 <code>C:\msys64\mingw64\bin</code>）加入环境变量的 <code>PATH</code> 中。</p>
+<p>也可以选择不更改环境变量，而是让 MSYS2 shell 继承 Windows 的环境变量，从而能够调用 <code>cargo</code> 和 <code>npm</code>。参考<a href="https://sourceforge.net/p/msys2/discussion/general/thread/dbe17030/">开发者给出的解决方案</a>，可以通过更改环境变量 <code>MSYS2_PATH_TYPE</code> 为 <code>inherit</code> 来实现。</p>
+<h2 id="如果您正在运行-linux"><a class="header" href="#如果您正在运行-linux">如果您正在运行 Linux</a></h2>
+<p>Linux 的发行版各有不同，但是通常包名应该为 <code>make</code>。</p>
 
                     </main>
 
