--- a/zh-Hans/print.html
+++ b/zh-Hans/print.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> 介绍</a></li><li class="chapter-item expanded "><a href="cook/summary.html"><strong aria-hidden="true">2.</strong> 开始</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> 安装 Rust</a></li><li class="chapter-item expanded "><a href="cook/02-install-msys2.html"><strong aria-hidden="true">2.2.</strong> 安装 MSYS2</a></li></ol></li><li class="chapter-item expanded "><a href="quick_start.html"><strong aria-hidden="true">3.</strong> 从源代码开始</a></li><li class="chapter-item expanded "><a href="config/summary.html"><strong aria-hidden="true">4.</strong> 配置</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/structure.html"><strong aria-hidden="true">4.1.</strong> 文件结构</a></li><li class="chapter-item expanded "><a href="config/character.html"><strong aria-hidden="true">4.2.</strong> 指定角色</a></li><li class="chapter-item expanded "><a href="config/resources.html"><strong aria-hidden="true">4.3.</strong> 资源</a></li><li class="chapter-item expanded "><a href="config/i18n.html"><strong aria-hidden="true">4.4.</strong> 国际化</a></li><li class="chapter-item expanded "><a href="config/switches.html"><strong aria-hidden="true">4.5.</strong> 分支</a></li><li class="chapter-item expanded "><a href="config/script.html"><strong aria-hidden="true">4.6.</strong> 脚本</a></li></ol></li><li class="chapter-item expanded "><a href="runtime/summary.html"><strong aria-hidden="true">5.</strong> 运行时</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="runtime/run.html"><strong aria-hidden="true">5.1.</strong> 运行一个游戏</a></li></ol></li><li class="chapter-item expanded "><a href="plugin/summary.html"><strong aria-hidden="true">6.</strong> 插件</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script 插件</a></li><li class="chapter-item expanded "><a href="plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text 插件</a></li><li class="chapter-item expanded "><a href="plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line 插件</a></li><li class="chapter-item expanded "><a href="plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action 插件</a></li><li class="chapter-item expanded "><a href="plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game 插件</a></li></ol></li><li class="chapter-item expanded "><a href="gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="packaging.html"><strong aria-hidden="true">8.</strong> 打包</a></li><li class="chapter-item expanded "><a href="platforms.html"><strong aria-hidden="true">9.</strong> 支持的平台</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> 介绍</a></li><li class="chapter-item expanded "><a href="cook/summary.html"><strong aria-hidden="true">2.</strong> 从零开始</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="cook/01-install-rust.html"><strong aria-hidden="true">2.1.</strong> 安装 Rust</a></li><li class="chapter-item expanded "><a href="cook/02-install-makefile.html"><strong aria-hidden="true">2.2.</strong> 安装 Makefile</a></li></ol></li><li class="chapter-item expanded "><a href="quick_start.html"><strong aria-hidden="true">3.</strong> 从源代码开始</a></li><li class="chapter-item expanded "><a href="config/summary.html"><strong aria-hidden="true">4.</strong> 配置</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="config/structure.html"><strong aria-hidden="true">4.1.</strong> 文件结构</a></li><li class="chapter-item expanded "><a href="config/character.html"><strong aria-hidden="true">4.2.</strong> 指定角色</a></li><li class="chapter-item expanded "><a href="config/resources.html"><strong aria-hidden="true">4.3.</strong> 资源</a></li><li class="chapter-item expanded "><a href="config/i18n.html"><strong aria-hidden="true">4.4.</strong> 国际化</a></li><li class="chapter-item expanded "><a href="config/switches.html"><strong aria-hidden="true">4.5.</strong> 分支</a></li><li class="chapter-item expanded "><a href="config/script.html"><strong aria-hidden="true">4.6.</strong> 脚本</a></li></ol></li><li class="chapter-item expanded "><a href="runtime/summary.html"><strong aria-hidden="true">5.</strong> 运行时</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="runtime/run.html"><strong aria-hidden="true">5.1.</strong> 运行一个游戏</a></li></ol></li><li class="chapter-item expanded "><a href="plugin/summary.html"><strong aria-hidden="true">6.</strong> 插件</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="plugin/script_plugin.html"><strong aria-hidden="true">6.1.</strong> Script 插件</a></li><li class="chapter-item expanded "><a href="plugin/text_plugin.html"><strong aria-hidden="true">6.2.</strong> Text 插件</a></li><li class="chapter-item expanded "><a href="plugin/line_plugin.html"><strong aria-hidden="true">6.3.</strong> Line 插件</a></li><li class="chapter-item expanded "><a href="plugin/action_plugin.html"><strong aria-hidden="true">6.4.</strong> Action 插件</a></li><li class="chapter-item expanded "><a href="plugin/game_plugin.html"><strong aria-hidden="true">6.5.</strong> Game 插件</a></li></ol></li><li class="chapter-item expanded "><a href="gui/summary.html"><strong aria-hidden="true">7.</strong> GUI</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="gui/live2d.html"><strong aria-hidden="true">7.1.</strong> Live2D</a></li></ol></li><li class="chapter-item expanded "><a href="packaging.html"><strong aria-hidden="true">8.</strong> 打包</a></li><li class="chapter-item expanded "><a href="platforms.html"><strong aria-hidden="true">9.</strong> 支持的平台</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,9 +144,24 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="start"><a class="header" href="#start">Start</a></h1>
+<p>Ayaka 一开始是一个 OSPP 2022 的项目。
+这是一个视觉小说引擎，主要关注三个目标：简单、自由、专注。</p>
+<h2 id="简单"><a class="header" href="#简单">简单</a></h2>
+<p>视觉小说应该容易创作，且作者不需要太多编程知识。
+我们提供了一个基于 YAML、结合类 TeX 命令的配置文件格式。
+这个简单的格式方便快速学习并创作自己的视觉小说。</p>
+<h2 id="自由"><a class="header" href="#自由">自由</a></h2>
+<p>辅以提供的插件系统，创作者可以自由实现任何想要的功能。
+我们默认提供了简单并强大的脚本插件。
+插件系统提供了运行时计算，并处理重要环节的可能性。</p>
+<h2 id="专注"><a class="header" href="#专注">专注</a></h2>
+<p>整个项目分为四部分：运行时、插件、配置、前端。
+创作者可以专注于一个部分的同时，不了解其它部分的工作。
+最简单的情况下，可以通过只编写配置文件来创作一部视觉小说。
+为了创作更加多彩的游戏，也可以考虑自定义前端。</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="从零开始"><a class="header" href="#从零开始">从零开始</a></h1>
 <p>我们假设读者是没有计算机背景的游戏制作人或视觉小说剧本家，在此基础上完成后续操作，成功运行本游戏引擎的游戏。</p>
-<p>你将会学习安装 Rust 与 MSYS2，之后就可以<a href="cook/../quick_start.html">从源代码开始</a>.</p>
+<p>你将会学习安装 Rust 与 Makefile，之后就可以<a href="cook/../quick_start.html">从源代码开始</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="安装rust环境"><a class="header" href="#安装rust环境">安装Rust环境</a></h1>
 <p>Rust是一门现代化的编程语言，且为编译执行，这就意味着并不需要特别的运行环境或解释器才能运行。我们需要安装的是Rust的开发环境。</p>
 <p>首先，我们找到Rust语言的<a href="https://www.rust-lang.org/">官网</a>，官网提供了多种语言的本地化，因此您可以切换点击“English”切换到简体中文界面方便阅读。随后我们依照官网的<a href="https://www.rust-lang.org/zh-CN/tools/install">安装指南</a>下载。</p>
@@ -165,23 +180,36 @@
 <pre><code>rustup install nightly
 rustup default nightly
 </code></pre>
-<h2 id="设定交叉编译目标"><a class="header" href="#设定交叉编译目标">设定交叉编译目标</a></h2>
-<pre><code>rustup target add 123
-456
-789
-</code></pre>
 <h2 id="每次在运行前的操作"><a class="header" href="#每次在运行前的操作">每次在运行前的操作</a></h2>
-<p>因为是nightly，所以每天更新</p>
+<p>因为是nightly，所以经常更新</p>
 <pre><code>rustup update
 </code></pre>
 <p>此外还有</p>
 <pre><code>git pull
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="安装-msys2"><a class="header" href="#安装-msys2">安装 MSYS2</a></h1>
-<ul>
-<li>https://packages.msys2.org/package/make</li>
-<li>https://segmentfault.com/q/1010000016064839</li>
-</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="安装-makefile"><a class="header" href="#安装-makefile">安装 Makefile</a></h1>
+<p>Ayaka 使用 Makefile 组织各个组件的编译和测试。</p>
+<h2 id="如果您正在运行-windows"><a class="header" href="#如果您正在运行-windows">如果您正在运行 Windows</a></h2>
+<p>一般建议使用 MSYS2 分发的 <a href="https://packages.msys2.org/package/make"><code>make</code></a>，也可以使用 MSYS2 分发的 <a href="https://packages.msys2.org/base/mingw-w64-make"><code>mingw32-make</code></a> 或 <a href="https://chocolatey.org/">chocolatey</a> 分发的 <a href="https://community.chocolatey.org/packages/make"><code>make</code></a>。</p>
+<h3 id="安装-msys2-分发的-make"><a class="header" href="#安装-msys2-分发的-make">安装 MSYS2 分发的 <code>make</code></a></h3>
+<p>首先从 <a href="https://www.msys2.org/">MSYS2 官网</a> 下载安装程序，并按照官网的安装指引安装 MSYS2。</p>
+<p>然后在 MSYS2 shell 中，运行</p>
+<pre><code>pacman -S make
+</code></pre>
+<p>安装 <code>make</code>。如果想要安装特定的 MinGW 环境的 Makefile，例如 MinGW64 环境，可以运行</p>
+<pre><code>pacman -S mingw-w64-x86_64-make
+</code></pre>
+<p>以安装该环境的 <code>mingw32-make</code>。</p>
+<h3 id="安装-chocolatey-分发的-make"><a class="header" href="#安装-chocolatey-分发的-make">安装 chocolatey 分发的 <code>make</code></a></h3>
+<p>首先从 <a href="https://chocolatey.org/install">chocolatey 官网</a> 根据相应的指引安装 chocolatey。</p>
+<p>然后在命令行中，运行</p>
+<pre><code>choco install make
+</code></pre>
+<h3 id="将-make-加入到环境变量-path"><a class="header" href="#将-make-加入到环境变量-path">将 <code>make</code> 加入到环境变量 <code>PATH</code></a></h3>
+<p>如果你使用 MSYS2，<code>make</code> 是不会被加入到 <code>PATH</code> 中的，你只有在使用 MSYS2 shell 的时候才能够调用它。针对这样的情况，你可以选择将 MSYS2 的 <code>/usr/bin</code> 目录（或者是 MinGW64 对应的 <code>/mingw64/bin</code>）对应的 Windows 目录，一般是 <code>C:\msys64\usr\bin</code>（或者 <code>C:\msys64\mingw64\bin</code>）加入环境变量的 <code>PATH</code> 中。</p>
+<p>也可以选择不更改环境变量，而是让 MSYS2 shell 继承 Windows 的环境变量，从而能够调用 <code>cargo</code> 和 <code>npm</code>。参考<a href="https://sourceforge.net/p/msys2/discussion/general/thread/dbe17030/">开发者给出的解决方案</a>，可以通过更改环境变量 <code>MSYS2_PATH_TYPE</code> 为 <code>inherit</code> 来实现。</p>
+<h2 id="如果您正在运行-linux"><a class="header" href="#如果您正在运行-linux">如果您正在运行 Linux</a></h2>
+<p>Linux 的发行版各有不同，但是通常包名应该为 <code>make</code>。</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="从源代码开始"><a class="header" href="#从源代码开始">从源代码开始</a></h1>
 <h2 id="先决条件"><a class="header" href="#先决条件">先决条件</a></h2>
 <p>所有平台都需要安装有<a href="https://www.rust-lang.org/">Rust</a>和<a href="https://nodejs.org/">Nodejs</a>。</p>
